# pimon

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
doc/: commands.rst  conf.py  getting-started.rst  index.rst
doc/commands/: add.rst  archive.rst  fetch.rst  init.rst  list.rst  pimon-add.rst  pimon-fetch.rst  pimon-list.rst  pimon-remove.rst  pimon-upgrade.rst  pimon-version.rst  pimon.rst  remove.rst  upgrade.rst
scripts/: install
src/pimon/: __init__.py  cli.py  settings.py  workspace.py
src/pimon/app/: accounts.py  console.py  models.py  settings.py  workspace.py
src/pimon/app/usecases/: __init__.py  archive_messages.py  fetch.py  fetch_messages.py  list_messages.py  remove_messages.py
src/pimon/db/: __init__.py  entities.py
src/pimon/db/migrations/: 001_auto.py  __init__.py
tests/: test__app__models.py  test__db__migrations.py  test_it.py
tools/: makemigration.py
