[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pimon"
version = "0.0.0"
description = "Simple IMAP feeder"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
peewee = "^3.15.1"
peewee-migrate = "^1.4.12"
pydantic = "^1.9.1"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
pimon = "pimon.cli:main"
